# ft_printf

./: .dir-locals.el  .env  .gitignore  CMakeLists.txt  Makefile  README.md  README.org  chat_min_field_width.org  compile_commands.json  ft_printf.c  ft_printf.h
bonus/: check_functions_bonus.c  create_hex_string.c  create_int_str_bonus.c  flags_bonus.c  ft_printf_bonus.c  handle_conversion_bonus.c  handle_percentage.c  helper2_bonus.c  helper_bonus.c  integer_handlers_bonus.c  pointer_handler_bonus.c  string_creation_bonus.c  string_handler_bonus.c
includes/: ft_printf.h  libftprintf.h  test_ft_printf.hpp
includes_bonus/: ft_printf_bonus.h  test_ft_printf_bonus.hpp
libft/: ft_get_empty_str.c  ft_num_of_digits.c  ft_num_of_digits_unsigned.c  ft_ptr_to_hex.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_unsigned_to_hex.c  libft.h
notes/: 20240901142039-ft_printf.org  20240901154936-va_list.org  20240901182753-bear.org  ft_printf.db
src/: check_functions.c  flags.c  ft_printf.c  handle_conversion.c  handlers.c  helper.c  helper2.c  integer_handlers.c  other_handlers.c  pointer_handler.c  string_creation.c  string_handler.c
tests/: examples.c  examples.cpp  main.cpp  see_output.c  test_ft_printf.cpp
tests_bonus/: examples_bonus.c  examples_bonus.cpp  main.cpp  test_ft_printf.cpp  test_ft_printf_bonus.cpp
